--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "https": "^1.0.0",
     "react": "15.4.2",
     "react-native": "0.41.2",
+    "react-native-device-info": "^0.9.9",
     "react-native-push-notification": "^2.2.1",
     "url": "^0.11.0"
   },
